[gd_scene load_steps=11 format=3 uid="uid://cs24whjx3lfb"]

[ext_resource type="Texture2D" uid="uid://ecfu1qcjcry7" path="res://assets/space_background_pack/Assets/Blue Version/layered/blue-back.png" id="1_c1no4"]
[ext_resource type="Texture2D" uid="uid://crcstlc7q3rr1" path="res://assets/space_background_pack/Assets/Blue Version/layered/blue-stars.png" id="2_yyyvj"]
[ext_resource type="Texture2D" uid="uid://7k2g3h5dtbgk" path="res://assets/space_background_pack/RC Art - Orbital Cannon/Sprites/Type A Ion Cannon_1.png" id="3_cij7g"]
[ext_resource type="Script" uid="uid://d0lkdts57t0u5" path="res://scripts/CutsceneIntro.gd" id="3_yyyvj"]
[ext_resource type="Texture2D" uid="uid://di4y2wuk66ccn" path="res://assets/space_background_pack/RC Art - Orbital Cannon/Sprites/Type A Ion Cannon_2.png" id="4_yo1j6"]
[ext_resource type="Texture2D" uid="uid://bwx8dpfbkq23b" path="res://assets/space_background_pack/RC Art - Orbital Cannon/Sprites/Type A Ion Cannon_3.png" id="5_2fv75"]
[ext_resource type="Texture2D" uid="uid://by3n4m30jns5x" path="res://assets/space_background_pack/RC Art - Orbital Cannon/Sprites/Type A Ion Cannon_4.png" id="6_n3wwj"]
[ext_resource type="Texture2D" uid="uid://mr1kklugb5ac" path="res://assets/craftpix-771800-free-war-pixel-art-2d-game-backgrounds/PNG/War2/Bright/War2.png" id="7_3h3w2"]
[ext_resource type="AudioStream" uid="uid://h3lypumuhkfh" path="res://assets/SoundTrail/Brains.ogg" id="9_cij7g"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_1oual"]
frames = 4
speed_scale = 2.3
frame_0/texture = ExtResource("3_cij7g")
frame_1/texture = ExtResource("4_yo1j6")
frame_1/duration = 1.0
frame_2/texture = ExtResource("5_2fv75")
frame_2/duration = 1.0
frame_3/texture = ExtResource("6_n3wwj")
frame_3/duration = 1.0

[node name="CutsceneIntro" type="Node2D"]
script = ExtResource("3_yyyvj")

[node name="SpaceBackground" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(4.2352943, 4.05)
texture = ExtResource("1_c1no4")

[node name="Stars" type="Sprite2D" parent="SpaceBackground"]
texture = ExtResource("2_yyyvj")

[node name="Satellite" type="Sprite2D" parent="."]
position = Vector2(875.11646, 309.38922)
rotation = 0.25830874
scale = Vector2(2.068152, 1.5440857)
texture = SubResource("AnimatedTexture_1oual")

[node name="CityBackground" type="Sprite2D" parent="."]
visible = false
position = Vector2(575.99994, 325)
scale = Vector2(0.59999996, 0.5981481)
texture = ExtResource("7_3h3w2")

[node name="FadeRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="FlashRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="BroadcastLabel" type="RichTextLabel" parent="."]
offset_left = 144.0
offset_top = 96.0
offset_right = 1000.0
offset_bottom = 576.0
theme_override_font_sizes/normal_font_size = 80
theme_override_font_sizes/bold_font_size = 120
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="BgmPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_cij7g")
